--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -1,20 +1,26 @@
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
-    <div class="container px-4 px-lg-5">
-        <a class="navbar-brand" href="/"><img width="80" src="logo.png" alt="Pepe's Cannabis Logo">Pepe's Cannabis</a>
-        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button>
+    <div class="container px-1">
+        <a class="navbar-brand" href="/"><img width="50" src="logo.png" alt="Pepe's Cannabis Logo">Pepe's Cannabis</a>
+        <button class="navbar-toggler me-1" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button>
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
-            <ul class="navbar-nav me-auto mb-2 mb-lg-0 ms-lg-4">
+            <form class="ms-lg-2" role="search">
+                <input class="form-control search-bar" type="search" placeholder="Search" aria-label="Search">
+            </form>
+            <ul class="navbar-nav mb-2 mb-lg-0 mx-auto">
                 <li class="nav-item"><a class="nav-link" aria-current="page" href="/">Products</a></li>
                 <li class="nav-item"><a class="nav-link" href="/categories">Categories</a></li>
-                <li class="nav-item"><a class="nav-link" href="#">About</a></li>
+                <li class="nav-item"><a class="nav-link" href="/contact">Contact</a></li>
+                <li class="nav-item"><a class="nav-link" href="/about">About</a></li>
             </ul>
-            <form class="d-flex">
-                <button class="btn btn-outline-dark" type="submit">
-                    <i class="bi-cart-fill me-1"></i>
-                    Cart
-                    <span class="badge bg-success text-white ms-1 rounded-pill">0</span>
-                </button>
-            </form>
+            <a class="me-2" href="/login">Login</a>
+            <a class="me-1" href="/register">Register</a>
+            <a href="/cart">
+                <i class="bi-cart-fill me-1"></i>
+                Cart
+                <span class="badge bg-success text-white ms-1 rounded-pill">0</span>
+            </a>
         </div>
     </div>
 </nav>
+
+<%# ms-1 ms-lg-4 me-auto %>
