--- a/app/views/products/_product.html.erb
+++ b/app/views/products/_product.html.erb
@@ -1,27 +1,23 @@
 <div id="<%= dom_id product %>">
-  <p>
-    <strong>Name:</strong>
-    <%= product.name %>
-  </p>
+
 
   <p>
-    <strong>Sku:</strong>
-    <%= product.sku %>
+    <h1><%= product.name %></h1>
   </p>
 
-  <p>
+    <p>
+    <strong>Description:</strong>
+    <%= product.description %>
+  </p>
+
+    <p>
     <strong>Price:</strong>
     <%= product.price %>
   </p>
 
   <p>
-    <strong>Description:</strong>
-    <%= product.description %>
-  </p>
-
-  <p>
-    <strong>Image:</strong>
-    <%= product.image %>
+    <strong>Sku:</strong>
+    <%= product.sku %>
   </p>
 
   <p>
