--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -42,7 +42,6 @@
         </div>
       <% end %>
     </div>
+    <div class="d-flex justify-content-center"><%= paginate @products %></div>
   </div>
 </section>
-
-<%= link_to "New product", new_product_path %>
