--- a/app/views/products/_product.html.erb
+++ b/app/views/products/_product.html.erb
@@ -12,7 +12,7 @@
 
     <p>
     <strong>Price:</strong>
-    <%= product.price %>
+    <%= number_to_currency(product.price.fdiv(100)) %>
   </p>
 
   <p>
