--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -31,7 +31,7 @@
                 <!-- Product name-->
                 <h5 class="fw-bolder"><%= link_to product.name, product %></h5>
                 <!-- Product price-->
-                $<%= product.price %>
+                <%= number_to_currency(product.price.fdiv(100)) %>
               </div>
             </div>
             <!-- Product actions-->
