--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -16,11 +16,11 @@
     <div class="products row gx-4 gx-lg-5 row-cols-2 row-cols-md-3 row-cols-xl-4 justify-content-center">
       <% @products.each do |product| %>
         <div class="col mb-5">
-          <div class="card h-100">
+          <div class="card h-100 w-100">
             <!-- Product image-->
             <% if product.image.attached?%>
               <p>
-                <%= image_tag product.image.variant(resize_to_fill: [262, 200]) %>
+                <%= image_tag product.image.variant(resize_to_fill: [262, 200]), :class => "w-100" %>
               </p>
             <% else %>
               <p class="text-center mt-5">No product image</p>
