--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -15,6 +15,17 @@
  */
 
 /* Custom bootstrap variables must be set or imported *before* bootstrap.*/
+html {
+  position: relative;
+  min-height: 100%;
+}
+
+body {
+  margin: 0 0 100px;
+  /* bottom = footer height */
+  padding-bottom: 60px;
+}
+
 @import "bootstrap";
 
 a {
@@ -44,4 +55,14 @@ button {
   .search-bar {
     width: 200px;
   }
+}
+
+.custom-footer {
+  background-color: rgb(82, 82, 82);
+  position: absolute;
+  left: 0;
+  bottom: 0;
+  height: 100px;
+  width: 100%;
+  overflow: hidden;
 }
