--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -1,3 +1,1 @@
-<footer class="py-5 bg-dark">
-    <div class="container"><p class="m-0 text-center text-white">Copywrong &copy; Pepe's Cannabis</p></div>
-</footer>
+<footer class="custom-footer"><p>Copywrong &copy; Pepe's Cannabis</p></footer>
