--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -27,16 +27,16 @@
             <% end %>
             <!-- Product details-->
             <div class="card-body p-4">
-              <div class="text-center">
+              <div class="text-center homepage-product-text">
                 <!-- Product name-->
-                <h5 class="fw-bolder"><%= link_to product.name, product %></h5>
+                <h5 class="fw-bolder homepage-product-text"><%= link_to product.name, product %></h5>
                 <!-- Product price-->
                 <%= number_to_currency(product.price.fdiv(100)) %>
               </div>
             </div>
             <!-- Product actions-->
             <div class="card-footer p-4 pt-0 border-top-0 bg-transparent">
-              <div class="text-center"><a class="btn btn-success text-white text-decoration-none" href="#">Add to cart</a></div>
+              <div class="text-center"><a class="btn btn-success text-white text-decoration-none homepage-product-button" href="#">Add to cart</a></div>
             </div>
           </div>
         </div>
