--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -1,1 +1,1 @@
-<footer class="custom-footer"><p>Copywrong &copy; Pepe's Cannabis</p></footer>
+<footer class="custom-footer"><p class="my-4 text-center text-white">Copywrong &copy; Pepe's Cannabis</p></footer>
