--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -48,13 +48,7 @@ button {
 }
 
 .search-bar {
-  width: 350px;
-}
-
-@media (max-width: 1199px) {
-  .search-bar {
-    width: 200px;
-  }
+  width: 50%;
 }
 
 @media (max-width: 420px) {
