--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -8,6 +8,9 @@
             <h1 class="display-4 fw-bolder">Welcome!</h1>
             <p class="lead fw-normal mb-0">Browse our wide selection of cannabis products</p>
         </div>
+        <form class="mt-3" role="search">
+          <input class="form-control search-bar mx-auto" type="search" placeholder="Search" aria-label="Search">
+        </form>
     </div>
 </header>
 
