Move login and register buttons

--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -6,7 +6,7 @@
     <div class="container px-4 px-lg-5 mt-5 mb-0">
         <div class="text-center">
             <h1 class="display-4 fw-bolder">Welcome!</h1>
-            <p class="lead fw-normal mb-0">Browse our wide selection of cannabis products</p>
+            <p class="lead fw-normal mb-0">Browse our wide selection of products</p>
         </div>
         <form class="mt-3" role="search">
           <input class="form-control search-bar mx-auto" type="search" placeholder="Search" aria-label="Search">
