--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -8,9 +8,9 @@
                 <li class="nav-item"><a class="nav-link" href="/categories">Categories</a></li>
                 <li class="nav-item"><a class="nav-link" href="/contact">Contact</a></li>
                 <li class="nav-item"><a class="nav-link" href="/about">About</a></li>
+                <li class="nav-item"><a class="nav-link" href="/login">Login</a></li>
+                <li class="nav-item"><a class="nav-link" href="/register">Register</a></li>
             </ul>
-            <a class="me-2" href="/login">Login</a>
-            <a class="me-1" href="/register">Register</a>
             <a href="/cart">
                 <i class="bi-cart-fill me-1"></i>
                 Cart
