--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -4,17 +4,17 @@
         <button class="navbar-toggler me-1" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button>
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav mb-2 mb-lg-0 mx-auto">
-                <li class="nav-item"><a class="nav-link" aria-current="page" href="/">Products</a></li>
-                <li class="nav-item"><a class="nav-link" href="/categories">Categories</a></li>
-                <li class="nav-item"><a class="nav-link" href="/contact">Contact</a></li>
-                <li class="nav-item"><a class="nav-link" href="/about">About</a></li>
-                <li class="nav-item"><a class="nav-link" href="/login">Login</a></li>
-                <li class="nav-item"><a class="nav-link" href="/register">Register</a></li>
+                <li class="nav-item ms-1"><a class="nav-link" aria-current="page" href="/">Products</a></li>
+                <li class="nav-item ms-1"><a class="nav-link" href="/categories">Categories</a></li>
+                <li class="nav-item ms-1"><a class="nav-link" href="/contact">Contact</a></li>
+                <li class="nav-item ms-1"><a class="nav-link" href="/about">About</a></li>
+                <li class="nav-item ms-1"><a class="nav-link" href="/login">Login</a></li>
+                <li class="nav-item ms-1"><a class="nav-link" href="/register">Register</a></li>
             </ul>
             <a href="/cart">
                 <i class="bi-cart-fill me-1"></i>
                 Cart
-                <span class="badge bg-success text-white ms-1 rounded-pill">0</span>
+                <span class="badge bg-success text-white rounded-pill">0</span>
             </a>
         </div>
     </div>
