--- a/app/views/products/_product.html.erb
+++ b/app/views/products/_product.html.erb
@@ -1,28 +1,37 @@
 <div id="<%= dom_id product %>">
 
-
-  <p>
-    <h1><%= product.name %></h1>
-  </p>
-
-    <p>
-    <strong>Description:</strong>
-    <%= product.description %>
-  </p>
-
-    <p>
-    <strong>Price:</strong>
-    <%= number_to_currency(product.price.fdiv(100)) %>
-  </p>
-
-  <p>
-    <strong>Sku:</strong>
-    <%= product.sku %>
-  </p>
-
-  <p>
-    <strong>Stock:</strong>
-    <%= product.stock %>
-  </p>
-
+  <div class="container mt-5 mb-5">
+    <div class="row d-flex justify-content-center">
+        <div class="col-md-10">
+            <div class="row">
+                <div class="col-md-6">
+                    <div class="images p-3">
+                        <div class="text-center p-4">   <% if @product.image.attached?%>
+                        <div class="card">
+                          <%= image_tag @product.image.variant(resize_to_fill: [500, 500]) %>
+                        </div>
+                      <% end %> </div>
+                    </div>
+                </div>
+                <div class="col-md-6">
+                    <div class="product p-4">
+                        <div class="d-flex justify-content-between align-items-center">
+                            <div class="d-flex align-items-center"> <i class="fa fa-long-arrow-left"></i> <span class="ml-1"> <%= link_to "Back", products_path %></span> </div> <i class="fa fa-shopping-cart text-muted"></i>
+                        </div>
+                        <div class="mt-4 mb-3">
+                            <h5 class="text-uppercase"><%= @product.name %></h5>
+                            <div class="price d-flex flex-row align-items-center">
+                                <div> <small class="dis-price"><%= number_to_currency(@product.price.fdiv(100)) %></small></div>
+                                <div class="ms-4"> <small class="dis-price"><%= @product.stock %> in stock</small></div>
+                                <div class="ms-5"> <small class="dis-price">SKU <%= @product.sku %></small></div>
+                            </div>
+                        </div>
+                        <p class="about"><%= @product.description %></p>
+                        <div class="cart mt-4 align-items-center"> <button class="btn btn-success text-uppercase mr-2 px-4">Add to cart</button> <i class="fa fa-heart text-muted"></i> <i class="fa fa-share-alt text-muted"></i> </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
 </div>
