--- a/app/views/products/_product.html.erb
+++ b/app/views/products/_product.html.erb
@@ -1,16 +1,19 @@
 <div id="<%= dom_id product %>">
-
   <div class="container mt-5 mb-5">
     <div class="row d-flex justify-content-center">
         <div class="col-md-10">
             <div class="row">
                 <div class="col-md-6">
                     <div class="images p-3">
-                        <div class="text-center p-4">   <% if @product.image.attached?%>
-                        <div class="card">
-                          <%= image_tag @product.image.variant(resize_to_fill: [500, 500]) %>
+                        <div class="text-center p-4">
+                        <% if @product.image.attached?%>
+                            <div class="card">
+                                <%= image_tag @product.image.variant(resize_to_fill: [500, 500]) %>
+                            </div>
+                        <% else %>
+                            <p>No product image</p>
+                        <% end %>
                         </div>
-                      <% end %> </div>
                     </div>
                 </div>
                 <div class="col-md-6">
@@ -33,5 +36,5 @@
             </div>
         </div>
     </div>
-</div>
+    </div>
 </div>
