--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -42,7 +42,8 @@ button {
   background-image: none !important;
 }
 
-.form-control:focus {
+.form-control:focus,
+.form-select:focus {
   border-color: green;
   box-shadow: inset 0 1px 1px rgb(255, 255, 255), 0 0 8px rgb(0, 135, 23);
 }
