--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -7,11 +7,11 @@
         <div class="text-center">
             <h1 class="display-4 fw-bolder">Welcome!</h1>
             <p class="lead fw-normal mb-0">Browse our wide selection of products</p>
+            <%= form_tag(products_path, :method => "get", :class => "mt-3") do%>
+              <%= select_tag "category", options_from_collection_for_select(@categories, "id", "name"), prompt: "Filter by category...", class: "mb-2 form-select form-select-sm search-bar mx-auto"%>
+              <%= search_field_tag :search, params[:search], placeholder: "Search products...", class: "form-control search-bar mx-auto" %>
+            <% end %>
         </div>
-        <%= form_tag(products_path, :method => "get", :class => "d-flex mt-3") do%>
-          <%= search_field_tag :search, params[:search], placeholder: "Search products...", class: "form-control search-bar mx-auto" %>
-          <%= collection_select :category, @categories, :id, :name, include_blank: true%>
-        <% end %>
     </div>
 </header>
 
