Products without search filter now render in chronological order

--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -24,7 +24,7 @@
             <!-- Product image-->
             <% if product.image.attached?%>
               <p>
-                <%= image_tag product.image.variant(resize_to_fill: [262, 200]), :class => "w-100" %>
+                <%= image_tag product.image.variant(resize_to_fill: [262, 200]), :class => "w-100", alt: product.name %>
               </p>
             <% else %>
               <p class="text-center mt-5">No product image</p>
