--- a/app/views/products/_product.html.erb
+++ b/app/views/products/_product.html.erb
@@ -8,7 +8,7 @@
                         <div class="text-center p-4">
                         <% if @product.image.attached?%>
                             <div class="card">
-                                <%= image_tag @product.image.variant(resize_to_fill: [500, 500]) %>
+                                <%= image_tag @product.image.variant(resize_to_fill: [500, 500]), alt: @product.name %>
                             </div>
                         <% else %>
                             <p>No product image</p>
