--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -14,7 +14,7 @@
             <a href="/cart">
                 <i class="bi-cart-fill me-1"></i>
                 Cart
-                <span class="badge bg-success text-white rounded-pill">0</span>
+                <span class="badge bg-success text-white rounded-pill"><%= @cart.count %></span>
             </a>
         </div>
     </div>
