--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -41,7 +41,12 @@
             </div>
             <!-- Product actions-->
             <div class="card-footer p-4 pt-0 border-top-0 bg-transparent">
-              <div class="text-center"><a class="btn btn-success text-white text-decoration-none homepage-product-button" href="#">Add to cart</a></div>
+              <% if @cart.include?(product) %>
+                <div class="text-center"><%= link_to "Remove from cart", remove_from_cart_path(product.id), data: { "turbo-method": :delete }, :class => "btn btn-success text-white text-decoration-none homepage-product-button" %></div>
+              <% else %>
+                <div class="text-center"><%= link_to "Add to cart", add_to_cart_path(product.id), data: { "turbo-method": :post }, :class => "btn btn-success text-white text-decoration-none homepage-product-button" %></div>
+              <% end %>
+
             </div>
           </div>
         </div>
