--- a/app/views/carts/show.html.erb
+++ b/app/views/carts/show.html.erb
@@ -28,7 +28,7 @@
                         <div class="row"><%= link_to product.name, product %></div>
                     </div>
                     <div class="col">
-                        <a href="#">-</a><a href="#">1</a><a href="#">+</a>
+                        <a href="#">-</a><a href="#">1</a><%= link_to "+", add_quantity_path() %>>
                     </div>
                     <div class="col">
                       <%= number_to_currency(product.price.fdiv(100)) %>
