--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -8,8 +8,12 @@
                 <li class="nav-item ms-1"><a class="nav-link" href="/categories">Categories</a></li>
                 <li class="nav-item ms-1"><a class="nav-link" href="/contact">Contact</a></li>
                 <li class="nav-item ms-1"><a class="nav-link" href="/about">About</a></li>
-                <li class="nav-item ms-1"><a class="nav-link" href="/login">Login</a></li>
-                <li class="nav-item ms-1"><a class="nav-link" href="/register">Register</a></li>
+                <% if user_signed_in? %>
+                    <li class="nav-item ms-1 mt-2"><%= button_to "Logout", destroy_user_session_path, method: :delete  %></li>
+                <% else %>
+                    <li class="nav-item ms-1"><a class="nav-link" href="/users/sign_in">Login</a></li>
+                    <li class="nav-item ms-1"><a class="nav-link" href="/users/sign_up">Register</a></li>
+                <% end %>
             </ul>
             <a href="/cart">
                 <i class="bi-cart-fill me-1"></i>
