--- a/app/views/orders/show.html.erb
+++ b/app/views/orders/show.html.erb
@@ -1,10 +1,32 @@
-<p style="color: green"><%= notice %></p>
-
-<%= render @order %>
-
-<div>
-  <%= link_to "Edit this order", edit_order_path(@order) %> |
-  <%= link_to "Back to orders", orders_path %>
-
-  <%= button_to "Destroy this order", @order, method: :delete %>
-</div>
+<h1>Orders</h1>
+<% if user_signed_in? %>
+<% @invoices.each do |invoice| %>
+    <div class="row mt-3">
+    <div class="row main align-items-center">
+        <div class="col ms-4">
+            <div class="row"><b class="p-0">Email</b></div>
+            <div class="row"> <%= invoice.customer_email %></div>
+        </div>
+        <div class="col ">
+            <div class="row"><b class="p-0">Invoice PDF</b></div>
+            <div class="row"> <a class="p-0" href="<%= invoice.invoice_pdf %>">Download</a></div>
+        </div>
+        <div class="col ">
+            <div class="row"><b class="p-0">Placed on</b></div>
+            <div class="row"><%= Time.at(invoice.created).strftime("%B %e, %Y at %I:%M %p") %></div>
+        </div>
+        <div class="col">
+          <div class="row"><b class="p-0">Total tax</b></div>
+          <div class="row"> <%= number_to_currency(invoice.amount_paid.fdiv(100)) %></div>
+        </div>
+        <div class="col">
+          <div class="row"><b class="p-0">Amount paid</b></div>
+          <div class="row"> <%= number_to_currency(invoice.amount_paid.fdiv(100)) %></div>
+        </div>
+    </div>
+    <div class="dropdown-divider mb-4"></div>
+  </div>
+<% end %>
+<%else%>
+<p>Please sign in to view orders</p>
+<%end%>
