--- a/app/views/products/_product.html.erb
+++ b/app/views/products/_product.html.erb
@@ -1,4 +1,4 @@
-<div id="<%= dom_id product %>">
+<div id="<%= dom_id @product %>">
   <div class="container mt-5 mb-5">
     <div class="row d-flex justify-content-center">
         <div class="col-md-10">
@@ -30,7 +30,14 @@
                             </div>
                         </div>
                         <p class="about"><%= @product.description %></p>
-                        <div class="cart mt-4 align-items-center"> <button class="btn btn-success text-uppercase mr-2 px-4">Add to cart</button> <i class="fa fa-heart text-muted"></i> <i class="fa fa-share-alt text-muted"></i> </div>
+                        <div class="cart mt-4 align-items-center">
+                         <%= form_with(url: cart_add_path) do |f| %>
+                            <%= f.hidden_field :id, value: @product.id %>
+                            <%= f.number_field :quantity, value: 0, min: 1, class: 'w-25' %>
+                            <br/>
+                            <%= f.submit "Add to Cart", :class => 'mt-3 button' %>
+                        <% end %>
+                        </div>
                     </div>
                 </div>
             </div>
